# pose_kit

./: CMakeLists.txt  README.md  package.xml
include/pose_kit/: dynamic_pose.hpp  kinematic_pose.hpp  pose.hpp  visibility_control.h
src/dynamic_pose/: dynamic_pose.cpp
src/kinematic_pose/: kinematic_pose.cpp
src/pose/: pose.cpp
